--- a/facebook/Makefile
+++ b/facebook/Makefile
@@ -1,9 +1,10 @@
 include $(GOROOT)/src/Make.inc
 
-TARG=github.com/pomack/contacts.go/google
+TARG=github.com/pomack/contacts.go/facebook
 GOFILES=\
     const.go\
     structs.go\
+    service.go
 
 
 include $(GOROOT)/src/Make.pkg
