--- a/linkedin/Makefile
+++ b/linkedin/Makefile
@@ -1,6 +1,6 @@
 include $(GOROOT)/src/Make.inc
 
-TARG=github.com/pomack/contacts.go/google
+TARG=github.com/pomack/contacts.go/linkedin
 GOFILES=\
     const.go\
     structs.go\
