Add API access to LinkedIn's people and connections API endpoints

--- a/linkedin/Makefile
+++ b/linkedin/Makefile
@@ -3,6 +3,7 @@ include $(GOROOT)/src/Make.inc
 TARG=github.com/pomack/contacts.go/linkedin
 GOFILES=\
     const.go\
+    service.go\
     structs.go\
 
 
