Get code working with Go1
Run gofix
Run gofmt -tabs=false -tabwidth=4 -w=true */*.go
Update other API changes that gofix did not resolve
Update Makefiles to use new "go" command and build system

--- a/googleplus/Makefile
+++ b/googleplus/Makefile
@@ -1,10 +1,24 @@
-include $(GOROOT)/src/Make.inc
+# Copyright 2012 Aalok Shah. All rights reserved.
+# Use of this source code is governed by a BSD-style
+# license that can be found in the LICENSE file.
 
-TARG=github.com/pomack/contacts.go/googleplus
-GOFILES=\
-    const.go\
-    service.go\
-    structs.go\
+all: install
 
+GOPATH:=$(GOPATH):`pwd`
+PACKAGE_NAME=github.com/pomack/contacts.go/googleplus
 
-include $(GOROOT)/src/Make.pkg
+clean:
+	GOPATH=$(GOPATH) go clean $(PACKAGE_NAME)
+
+install:
+	GOPATH=$(GOPATH) go install $(PACKAGE_NAME)
+
+nuke:
+	GOPATH=$(GOPATH) go clean -i $(PACKAGE_NAME)
+
+test:
+	GOPATH=$(GOPATH) go test $(PACKAGE_NAME)
+
+check:
+	GOPATH=$(GOPATH) go build $(PACKAGE_NAME)
+
